--- a/mybatis-plus/build.gradle
+++ b/mybatis-plus/build.gradle
@@ -6,6 +6,10 @@ dependencies {
 
     testImplementation "${lib.'spring-test'}"
 
+    testImplementation "${lib.'testcontainers-junit-jupiter'}"
+    testImplementation "${lib.'testcontainers-jdbc'}"
+    testImplementation "${lib.'testcontainers-postgresql'}"
+
     testImplementation "${lib."jackson"}"
     testImplementation "${lib."fastjson"}"
     testImplementation "${lib."gson"}"
@@ -23,6 +27,5 @@ dependencies {
     testImplementation "${lib.'logback-classic'}"
     testImplementation "javax.annotation:javax.annotation-api:1.3.2"
     testImplementation "${lib.cglib}"
-    testImplementation "${lib.postgresql}"
 //    testCompile ('org.apache.phoenix:phoenix-core:5.0.0-HBase-2.0')
 }
